<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blue"
    tools:context=".ResultActivityTopic1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="serif"
            android:text="@string/topic1_quiz"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_trophy"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="25dp"
            android:contentDescription="@string/image"
            android:src="@drawable/image_trophy"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_congratulations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="serif"
                android:text="@string/congratulations"
                android:layout_margin="1dp"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_toRightOf="@+id/tv_congratulations"
                android:layout_toEndOf="@+id/tv_congratulations"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="normal"
                android:fontFamily="serif"
                android:text="@string/username" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:fontFamily="serif"
            tools:text="Your score is 9 out of 10" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/tv_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginVertical="20dp"
            android:fontFamily="serif"
            android:text="Home"
            android:gravity="center"
            android:background="@drawable/bg_submit_button"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="normal" />

    </RelativeLayout>

</RelativeLayout>