<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blue"
    tools:context=".Topic1Intro">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_topic_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_back_login"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/icon_back"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/tv_topic1_tip_page_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/topic1"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/iv_high_scores"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_topic1_tip"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:layout_below="@+id/cv_topic_header"
        android:src="@drawable/iv_alc_ponte_25_abril"
        android:contentDescription="@string/image" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_next_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@+id/iv_topic1_tip"
        android:background="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="5dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_topic1_tip_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:gravity="start"
                android:layout_margin="5dp"
                android:text="@string/topic1_tip_header"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:paddingHorizontal="15dp"
               android:paddingVertical="1dp" />

            <TextView
                android:id="@+id/tv_topic1_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_topic1_tip_header"
                android:fontFamily="serif"
                android:gravity="start"
                android:layout_margin="5dp"
                android:text="@string/topic1_tip"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="1dp"/>

            <TextView
                android:id="@+id/tv_topic1_tip_closer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_topic1_tip"
                android:fontFamily="serif"
                android:gravity="start"
                android:layout_margin="5dp"
                android:text="Tap for more tips"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="1dp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_play_quiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginHorizontal="100dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/bg_normal_tv_header"
                android:padding="10dp"
                android:fontFamily="serif"
                android:text="@string/play_quiz"
                android:textColor="@color/black"
                android:textSize="22sp" />

    </LinearLayout>

</RelativeLayout>